ZX4D30NE01S/build/log/idf_py_stdout_output_10109
[1/10] Performing build step for 'bootloader'
[1/1] cd "/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/build/bootloader/esp-idf/esptool_py" && /Users/lilnat/.espressif/python_env/idf5.4_py3.12_env/bin/python /Users/lilnat/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/lilnat/HK241/Đồ\ án\ KTMT/Web/hardware/ZX4D30NE01S/build/bootloader/bootloader.bin
Bootloader binary size 0x5a70 bytes. 0x2590 bytes (29%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/lilnat/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20240906/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-dev-3489-g6e5a178b31-dirty\" -DLV_ATTRIBUTE_FAST_MEM=IRAM_ATTR -DLV_CONF_INCLUDE_SIMPLE -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/build/config" -I"/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/main" -I/Users/lilnat/esp-idf/components/newlib/platform_include -I/Users/lilnat/esp-idf/components/freertos/config/include -I/Users/lilnat/esp-idf/components/freertos/config/include/freertos -I/Users/lilnat/esp-idf/components/freertos/config/xtensa/include -I/Users/lilnat/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/lilnat/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/lilnat/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/lilnat/esp-idf/components/freertos/esp_additions/include -I/Users/lilnat/esp-idf/components/esp_hw_support/include -I/Users/lilnat/esp-idf/components/esp_hw_support/include/soc -I/Users/lilnat/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/lilnat/esp-idf/components/esp_hw_support/dma/include -I/Users/lilnat/esp-idf/components/esp_hw_support/ldo/include -I/Users/lilnat/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/lilnat/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/lilnat/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/lilnat/esp-idf/components/heap/include -I/Users/lilnat/esp-idf/components/heap/tlsf -I/Users/lilnat/esp-idf/components/log/include -I/Users/lilnat/esp-idf/components/soc/include -I/Users/lilnat/esp-idf/components/soc/esp32s3 -I/Users/lilnat/esp-idf/components/soc/esp32s3/include -I/Users/lilnat/esp-idf/components/soc/esp32s3/register -I/Users/lilnat/esp-idf/components/hal/platform_port/include -I/Users/lilnat/esp-idf/components/hal/esp32s3/include -I/Users/lilnat/esp-idf/components/hal/include -I/Users/lilnat/esp-idf/components/esp_rom/include -I/Users/lilnat/esp-idf/components/esp_rom/esp32s3/include -I/Users/lilnat/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/lilnat/esp-idf/components/esp_rom/esp32s3 -I/Users/lilnat/esp-idf/components/esp_common/include -I/Users/lilnat/esp-idf/components/esp_system/include -I/Users/lilnat/esp-idf/components/esp_system/port/soc -I/Users/lilnat/esp-idf/components/esp_system/port/include/private -I/Users/lilnat/esp-idf/components/xtensa/esp32s3/include -I/Users/lilnat/esp-idf/components/xtensa/include -I/Users/lilnat/esp-idf/components/xtensa/deprecated_include -I/Users/lilnat/esp-idf/components/lwip/include -I/Users/lilnat/esp-idf/components/lwip/include/apps -I/Users/lilnat/esp-idf/components/lwip/include/apps/sntp -I/Users/lilnat/esp-idf/components/lwip/lwip/src/include -I/Users/lilnat/esp-idf/components/lwip/port/include -I/Users/lilnat/esp-idf/components/lwip/port/freertos/include -I/Users/lilnat/esp-idf/components/lwip/port/esp32xx/include -I/Users/lilnat/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/lilnat/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/lilnat/esp-idf/components/esp_lcd/include -I/Users/lilnat/esp-idf/components/esp_lcd/interface -I/Users/lilnat/esp-idf/components/esp_lcd/rgb/include -I/Users/lilnat/esp-idf/components/driver/deprecated -I/Users/lilnat/esp-idf/components/driver/i2c/include -I/Users/lilnat/esp-idf/components/driver/touch_sensor/include -I/Users/lilnat/esp-idf/components/driver/twai/include -I/Users/lilnat/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/lilnat/esp-idf/components/esp_pm/include -I/Users/lilnat/esp-idf/components/esp_ringbuf/include -I/Users/lilnat/esp-idf/components/esp_driver_gpio/include -I/Users/lilnat/esp-idf/components/esp_driver_pcnt/include -I/Users/lilnat/esp-idf/components/esp_driver_gptimer/include -I/Users/lilnat/esp-idf/components/esp_driver_spi/include -I/Users/lilnat/esp-idf/components/esp_driver_mcpwm/include -I/Users/lilnat/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/lilnat/esp-idf/components/esp_driver_i2s/include -I/Users/lilnat/esp-idf/components/esp_driver_sdmmc/include -I/Users/lilnat/esp-idf/components/sdmmc/include -I/Users/lilnat/esp-idf/components/esp_driver_sdspi/include -I/Users/lilnat/esp-idf/components/esp_driver_sdio/include -I/Users/lilnat/esp-idf/components/esp_driver_dac/include -I/Users/lilnat/esp-idf/components/esp_driver_rmt/include -I/Users/lilnat/esp-idf/components/esp_driver_tsens/include -I/Users/lilnat/esp-idf/components/esp_driver_sdm/include -I/Users/lilnat/esp-idf/components/esp_driver_i2c/include -I/Users/lilnat/esp-idf/components/esp_driver_uart/include -I/Users/lilnat/esp-idf/components/vfs/include -I/Users/lilnat/esp-idf/components/esp_driver_ledc/include -I/Users/lilnat/esp-idf/components/esp_driver_parlio/include -I/Users/lilnat/esp-idf/components/esp_driver_usb_serial_jtag/include -I"/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/components/lvgl" -I"/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/components/lvgl/src" -I"/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/components" -I/Users/lilnat/esp-idf/components/esp_timer/include -I/Users/lilnat/esp-idf/components/mqtt/esp-mqtt/include -I/Users/lilnat/esp-idf/components/esp_event/include -I/Users/lilnat/esp-idf/components/tcp_transport/include -I/Users/lilnat/esp-idf/components/esp-tls -I/Users/lilnat/esp-idf/components/esp-tls/esp-tls-crypto -I/Users/lilnat/esp-idf/components/mbedtls/port/include -I/Users/lilnat/esp-idf/components/mbedtls/mbedtls/include -I/Users/lilnat/esp-idf/components/mbedtls/mbedtls/library -I/Users/lilnat/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/lilnat/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/Users/lilnat/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/Users/lilnat/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/Users/lilnat/esp-idf/components/esp_wifi/include -I/Users/lilnat/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/lilnat/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/lilnat/esp-idf/components/esp_wifi/include/local -I/Users/lilnat/esp-idf/components/esp_phy/include -I/Users/lilnat/esp-idf/components/esp_phy/esp32s3/include -I/Users/lilnat/esp-idf/components/esp_netif/include -I/Users/lilnat/esp-idf/components/nvs_flash/include -I/Users/lilnat/esp-idf/components/esp_partition/include -I/Users/lilnat/esp-idf/components/json/cJSON -I"/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/managed_components/espressif__esp_websocket_client/include" -I/Users/lilnat/esp-idf/components/http_parser -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -O2 "-fmacro-prefix-map=/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S=." -fmacro-prefix-map=/Users/lilnat/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -Wno-format -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c '/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/main/main.c'
/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/main/main.c: In function 'websocket_event_handler':
/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/main/main.c:58:17: error: expected '}' before 'else'
   58 |                 else
      |                 ^~~~
/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/main/main.c:70:9: error: break statement not within loop or switch
   70 |         break;
      |         ^~~~~
/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/main/main.c: At top level:
/Users/lilnat/HK241/Đồ án KTMT/Web/hardware/ZX4D30NE01S/main/main.c:72:1: error: expected identifier or '(' before '}' token
   72 | }
      | ^
ninja: build stopped: subcommand failed.
